# Henji-AI

./: .eslintrc.json  .gitignore  CLAUDE.md  MIGRATION_PLAN.md  ProjectSummary.md  README.md  fix_log_params.py  fix_unused_imports.py  index.html  package-lock.json  package.json  replace_console_logs.py  tailwind.config.js  test.html  tsconfig.json  vite.config.ts  参数组件替换清单.md  项目规划.md
.agent/rules/: base.md
.cargo/: config.toml
.github/workflows/: build.yml
.qoder/rules/: base.md
.trae/documents/: Vidu Q1 装饰性减速进度条与超时重试方案.md  为 Minimax Hailuo-02 增加适配（参考 2.3 实现）.md  为设置面板添加完整关闭动画（遮罩淡出+面板缩小）.md  优化 Hailuo 参数控件样式与下拉菜单（参考 Kling）.md  修复 Hailuo 本地保存失败（HTTP 权限域配置）.md  全局图片数量约束与模型切换联动（含 Vidu Q1 模式自动化）.md  压缩并改存上传图片为 JPEG（含像素上限）.md  固定分辨率按钮宽度并显示比例标签.md  完善 Hailuo-02 文档中的时长与分辨率联动说明.md  完善 Wan 2.5 适配与下拉样式优化.md  将“输入区域”整体背景统一为 #1B1C21.md  将分辨率按钮宽度缩小为一半（60px）.md  将分辨率比例选项样式与“高清2K_超清4K”一致.md  彻底移除分辨率按钮点击时的白色ring.md  文本输入框焦点环改为白色 20% 并淡入淡出.md  本地保存上传图片并纳入删除流程.md  模型选择面板固定尺寸与滚动优化.md  移除“最大数量”输入框的双重焦点环.md  移除分辨率按钮的蓝色焦点环.md  移除输入区域文本框描边.md  统一“风格”下拉框宽度与“运动幅度”一致.md  统一微调按钮样式：隐藏原生spinner并为“最大数量”添加自定义上下按钮.md  统一描边与分割线为 #2e2e2e，80% 不透明度.md  统一深色主题与强调色（#0a0b0d_#007eff）更新方案.md  统一视频放大与自定义播放控件实现方案.md  统一输入区域整块背景为 #131313_70.md  统一输入框与历史展示区域背景为 #1B1C21.md  视频查看器控件自动隐藏与淡入淡出方案.md  适配派欧云视频模型（参考 Vidu Q1 实现）.md  隐藏 PixVerse 时长选项.md  隐藏 PixVerse 随机种子并完善文档.md
.trae/rules/: project_rules.md
API文档/: video_player_template.html
API文档/fal/: nano-banana-pro.txt  nano-banana-pro_edit.txt
API文档/派欧云/: Kling_V2.5_Turbo_图生视频.md  MiniMax_Speech-02-hd_同步语音合成.md  MiniMax_Speech-02-turbo_同步语音合成.md  MiniMax_Speech-2.5-turbo-preview_同步语音合成.md  MiniMax_音频快速复刻.md  Minimax_Hailuo-02.md  Minimax_Hailuo_2.3_Fast_图生视频.md  PixVerse_V4.5_图生视频.md  PixVerse_V4.5_文生视频.md  Seedance_V1_Lite_图生视频 .md  Seedance_V1_Lite_图生视频.md  Seedance_V1_Pro_图生视频.md  Seedance_V1_Pro_文生视频.md  查询任务结果.md
docs/: MACOS_GUIDE.md  VERIFY_REFACTOR.md  ai-guide-fal-v2.md  ai-guide-fal.md  ai-guide-kie.md  ai-guide-new-model.md  ai-guide-new-provider.md  ai-guide-ppio.md  implementation-plan-hailuo-2.3.md  implementation-summary-hailuo-2.3.md  model-adaptation-guide.md  model-resolution-integration-guide.md  tab-workspace-guide.md
docs/FAQ/: fal-model-integration-issues.md  history-json-base64-bloat.md  video_thumbnail_and_state_management.md  新模型参数-同步更新清单.md  配置驱动架构-常见问题.md
docs/REFACTOR/: PARAMETER_REFACTORING_SUMMARY.md  REFACTORING_SUMMARY.md  REFACTOR_COMPLETE_REPORT.md  REFACTOR_GUIDE.md  REFACTOR_OPTIONS_BUILDER.md  batch_rename_params.py  (+7 more)
scripts/: README.md  release.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsh
src-tauri/src/: clipboard_files.rs  main.rs  modelscope.rs
src-tauri/wix/: license.rtf  main.wxs
(+481 files in other folders)
